Edited wiki page through web user interface.

--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,5 +1,22 @@
 #summary Change log for Ampache Mobile
 ==Version Information==
+===Version 0.9.1 (04/16/2010)===
+
+Improvements
+----
+  * Updates to Help Scene, including Check for Update, User Guide and App Introduction
+  * Made stall/crash recovery optional, configurable in account editor. Default:On
+  * Added Donate Button to About Screen
+  * Tweaked stall detection for less false positives
+  * Fixed formatting on account editor
+Bug Fixes
+----
+  * Reset Stall detection when buffer loss is detected
+  * Fixed orange key on search causing scene to exit
+  * Fixed load albums from the genre page
+  * Fixed a bug which caused the playlist and buffer ahead to die
+
+
 ===Version 0.9.0  (04/12/2010)===
 Note: I've switched to using the Palm App Catalog to distribute Ampache Mobile, mostly because I want to [http://palmhotapps.com/ win some money].  The application can now be installed by clicking this link from your phone... [http://developer.palm.com/appredirect/?packageid=com.ampachemobile Install]  
 
