--- a/trunk/src/CHANGES
+++ b/trunk/src/CHANGES
@@ -1,3 +1,65 @@
+Version 0.9.1 (04/17/2010)
+
+Improvements
+
+    * Updates to Help Scene, including Check for Update, User Guide and App Introduction
+    * Made stall/crash recovery optional, configurable in account editor. Default:On
+    * Added Donate Button to About Screen
+    * Tweaked stall detection for less false positives
+    * Fixed formatting on account editor 
+
+Bug Fixes
+
+    * Reset Stall detection when buffer loss is detected
+    * Fixed orange key on search causing scene to exit
+    * Fixed load albums from the genre page
+    * Fixed a bug which caused the playlist and buffer ahead to die 
+
+Version 0.9.0 (04/12/2010)
+
+New Features
+
+    * Buffer Ahead!
+          o Configurable from 1 to 5 songs
+          o This is true buffer ahead, using system RAM. Other solutions download to flash, which is bad for your device.
+          o Intelligent buffer selection, attempts to provide seamless playback with no downloading break between tracks.
+          o Many workarounds for bugs in webOS, don't think many people have attempted to use webOS in this way.
+          o Auto Detection of changes in network coverage and buffer stalls
+          o Auto Detection of buffers lost due to device sleep
+          o I've done my best to make this stable without transcoding, but it really shines when you enable it with transcoding.
+          o Settings in the Accounts Settings Page
+          o Updated the error reporting to follow the new audio api 
+    * Artists and Albums List Caching
+          o Saves a local copy of your entire albums and artists lists, load times are ridiculous!
+          o Auto detects when a change to your server occurs and re-saves the lists.
+          Note: if you have auto scanning enabled on your server this will cause the list to re-download after every scan.
+          o Only applies to full Albums and Artist lists, everything else still goes against the server.
+          o Updated account editor to reflect how many saved items you have 
+    * New Icon and Splash Screen
+          o Lets face it, the old icon is kinda ugly. Thankfully forum contributor Globex has stepped up and
+          volunteered his services and designed a new one along with anew splash screen! It still pays homage
+          to the people at the Ampache project, aka it features their squirrel logo but I hope you agree with me,
+          it looks a lot better on the phone. So a big thanks to Globex Designs, Inc. for the new icon. 
+
+Improvements
+
+    * Figured out how to use the Shift and Sym Keys, updated the controls popup with changes.
+    * Lowered the search character limit to 2.
+    * Redesign of the Accounts Settings Page to Accommodate all the new options.
+    * Added a whole more shuffle to the playlist shuffle.
+    * Changed repeat list once to repeat song.
+    * Banner notifications where they felt right.
+    * Shuffling a list now displays the list in the order playback will occur.
+    * Banner Notifications of new songs when you are looking at another app. Will not wake up screen if its asleep.
+    * Go straight to songs view from artists if there is only one album 
+
+Bug Fixes
+
+    * Fixed date selector CSS so its no longer black on black with palm-dark
+    * Added work around for %20 (spaces) in song URL issue. If you have been having trouble streaming enable it in the Account Editor 
+
+
+
 Version 0.8.5 (Beta) (03/24/2010)
 
        New Features
