--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,5 +1,18 @@
 #summary Change log for Ampache Mobile
 ==Version Information==
+
+===Version 0.9.2 (04/21/2010)===
+Improvements
+----
+  * Sorting: Tap and Hold the Header on any list to bring up a sort menu. Only the Albums Sort saves its state.
+  * Jump: Added Jump to Top/Bottom on Songs, Genre and Playlist screens
+  * Added first time use popup
+Bug Fixes
+----
+  * Infinite loop in now playing screen caused the app to lock up, possibly resulting in false audio stall detection.
+  * Playback errors sometime broke the now playing list.
+  * Fixed Check for Updates so it doesn't have to launch the browser.
+
 ===Version 0.9.1 (04/17/2010)===
 
 Improvements
