--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -68,3 +68,12 @@ Ampache Mobile is just an app that plays music from a server, an [http://ampache
   * The ";" is a comment character in the Aampache configuration file. Everything on the line after it is a comment and will not be executed. By default most transcoding commands are commented out -- they will not run.
   * Use the Amapche log file...it can REALLY help you to figure out why things are not working.
   * The Ampache page on Transcoding: http://ampache.org/wiki/config:transcode
+
+===Getting a lot of Audio Stalls===
+There are a couple of things you can do for webOS audio stalls.
+  # Properly configure your Apache timeout work around in the account editor.
+    * There is an issue when downloading stalls with webOS. If it stalls to long the server will close the connection and webOS fails to realize this, when it attempts to finish its download the audio service crashes. The timeout workaround in the account manager is for detecting this potential error and circumventing it, so you may also want to confirm your timeout setting. 
+  * The Apache setting for this is can be found in httpd.conf.  Setting [http://httpd.apache.org/docs/2.0/mod/core.html#timeout Description]
+  * You can also extend the timeout for less crashes/
+  * The value in httpd.conf and Ampache Mobile should match, if there is no value in httpd.conf then leave Ampache Mobile at 300.
+  # Enabling transcoding/downsampling causes the Audio service to stall out downloading tracks far less often, thus avoiding the bug described above.  So it's a good thing to enable.
