--- a/wiki/AACPlusTranscoding.wiki
+++ b/wiki/AACPlusTranscoding.wiki
@@ -3,12 +3,13 @@
 WARNING: This is a work in progress and is not complete yet.
 
 = Introduction =
-
+----
 AAC+ also known as [http://en.wikipedia.org/wiki/High-Efficiency_Advanced_Audio_Coding HE-AAC] provides the best overall streaming experience for Ampache Mobile.  It will give you good quality music with very fast buffering times.  
 
 In order to use it you need to do some setup on your server.
 
 = Required Tools =
+----
  * Text Editor
  * aacplusenc
    * Windows: http://markspark.net/slasha/aacplusenc-0.17.1.rar
@@ -20,7 +21,7 @@ In order to use it you need to do some setup on your server.
  * Others: www.google.com
 
 = Details =
-
+----
 NOTE: This guide is written against Ampache 3.5.4
 
 == Step 1: Setting up MIME types ==
@@ -148,12 +149,12 @@ Remember to save your changes!
     * Transcoding - Default
   # Make sure you check "Apply to All"
 
-== Things to know ==
-
+= Potential Issues =
+----
   # Bitrates higher then 48 are not supported by aacPlusenc, but this encoder with the AAC+ format provides easily the same quality product as a 96 kbps MP3.
   # It will fail on mono files.
 
-== References ==
+= References =
 ----
 [http://forums.precentral.net/showthread.php?p=2423515&posted=1#post2423018 ihooten's Precentral Post]<br>
 [http://ampache.org/forums/viewtopic.php?f=2&t=3067 Ampache.org AAC+ Discussion]<br>
