--- a/wiki/AACPlusTranscoding.wiki
+++ b/wiki/AACPlusTranscoding.wiki
@@ -145,6 +145,7 @@ Remember to save your changes!
   # Bitrates higher then 48 are not supported by aacPlusenc, but this encoder with the AAC+ format provides easily the same quality product as a 96 kbps MP3.
   # It will fail on mono files.
   # The flash player included with Ampache cannot play AAC+
+  # webOS cannot seek within a track when using AAC+
 
 = References =
 ----
